[package]
name = "test-cpuid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
bitflags = "1.3.2"
log-derive = "0.4.1" # For logging with `.covers()`
log = "0.4.17"
serde = {version="1.0.138",features=["derive"]}

[dev-dependencies]
simple_logger = "2.2.0"
serde_json = "1.0.82"