[package]
name = "test-cpuid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
bitflags = "1.3.2"
log-derive = "0.4.1" # For logging with `.covers()`
log = "0.4.17"
serde = {version="1.0.138",features=["derive"]}
kvm-bindings = { version="0.5.0", features=["fam-wrappers"] }

[dev-dependencies]
simple_logger = "2.2.0"
serde_json = "1.0.82"
kvm-ioctls = "0.11.0"
libc = "0.2.126"